<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- General Strings -->
    <string name="app_name">SDL Auto Tester</string>
    <string name="no_selection">No selection</string>
    <string name="not_implemented">This feature is not yet implemented.</string>
    <string name="not_an_sdl_command">The input argument is not an SDL command.</string>
    <string name="add_an_item">Add an Item</string>

    <!-- Menu Strings -->
    <string name="menu_connect">Connect to SDL</string>
    <string name="menu_disconnect">Disconnect from SDL</string>
    <string name="menu_reset">Reset SDL Connection</string>
    <string name="menu_clear_list">Clear ListView</string>
    <string name="menu_help">Help</string>
    <string name="menu_help_home">Help Home</string>
    <string name="menu_help_close">Close Help</string>

    <!-- Dialog Strings -->
    <string name="sdl_command_dialog_title">Select an SDL Command:</string>

    <!-- SDL Connection -->
    <string name="connection_status_format">Connection Status:</string>
    <string name="audio_status_format">audio status:</string>
    <string name="pcm_status_format">pcm status:</string>
    <string name="video_status_format">video status:</string>
    <string name="ip_address">IP Address</string>
    <string name="ip_port">IP Port</string>

    <!-- Offline Mode -->
    <string name="offline_mode_text">Would you like to enter offline mode?</string>

    <!-- Function Banks -->
    <string name="function_bank_root_name">Root-level Menu</string>

    <!-- Button Subscriptions -->
    <string name="button_subscriptions_already_subscribed">Already subscribed to all buttons!</string>
    <string name="button_subscriptions_none_subscribed">App hasn\'t subscribed to buttons yet!</string>

    <!-- SoftButtons -->
    <string name="include_softbuttons">Include SoftButtons</string>

    <!-- Slider -->
    <string name="dynamicFooter">Dynamic Footer</string>

    <!-- Perform Interaction -->
    <string name="perform_interaction_title">Interaction Title</string>
    <string name="perform_interaction_voice_prompt">Interaction Voice Prompt</string>
    <string name="perform_interaction_select_choice_set">Select Choice Sets</string>
    <string name="perform_interaction_mode">Interaction Mode</string>
    <string name="perform_interaction_timeout">Interaction Timeout (in seconds)</string>
    <string name="perform_interaction_timeout_enabled">Interaction Timeout Enabled</string>
    <string name="interaction_list_none_added">No choice interaction sets have been added yet!</string>

    <!-- Put File -->
    <string name="put_file_persistent_file">Persistent File</string>
    <string name="sdl_image_name">SDL Image Name</string>
    <string name="add_image">Add Image</string>
    <string name="title_activity_help">HelpActivity</string>
    <string name="title_activity_case_list">CaseListActivity</string>
    <string name="title_activity_case_result">CaseResultActivity</string>
    <string name="title_activity_audio">AudioActivity</string>
    <string name="title_activity_video">VideoActivity</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="start_video">start</string>
    <string name="send_video">send</string>
    <string name="stop_video">stop</string>
    <string name="start_audio">start send data</string>
    <string name="start_pcm">start pcm</string>
    <string name="stop_audio">stop</string>
    <string name="send_message">Send Message</string>
    <string name="to_video">to video</string>
    <string name="to_audio">to audio</string>

    
<!--     General Strings -->
    <string name="sdl_disconnected">SDL has been disconnected</string>
    
<!--     Dialog Strings -->
    <string name="positive_button">OK</string>
    <string name="negative_button">Cancel</string>
    
<!--     Add Command -->
    <string name="add_command_command_name">Command Name</string>
    <string name="add_command_vr_keyword">Voice Recognition Keyword</string>
    <string name="add_command_parent_menu">Parent Menu:</string>
    <string name="add_command_image_type">Image Type:</string>
    
<!--     Delete Command -->
    <string name="no_commands_to_delete">There are no commands to delete.</string>
    
<!--     Delete Submenu -->
    <string name="no_submenus_to_delete">There are no submenus to delete.</string>
    
<!--     Add Submenu -->
    <string name="submenu_name">Submenu Name</string>
    
<!--     Get DTCs and Read DIDs -->
    <string name="ecu_name">ECU Name (0&#8211;65535)</string>
    <string name="did_location">DID Location (0&#8211;65535)</string>
    
<!--     Slider -->
    <string name="slider_title">Slider Title</string>
    <string name="slider_footer">Slider Footer</string>
    <string name="slider_ticks">Number of slider ticks: </string>
    <string name="slider_start_position">Start position: </string>
    <string name="timeout">Timeout: </string>
    
<!--     Scrollable Message -->
    <string name="scrollable_message_text">"\"\'My mind,\' he said, \'rebels at stagnation. Give me problems, give me work, give me the most abstruse cryptogram or the most intricate analysis, and I am in my own proper atmosphere. I can dispense then with artificial stimulants. But I abhor the dull routine of existence. I crave for mental exaltation. That is why I have chosen my own particular profession,&#8211;or rather created it, for I am the only one in the world.\'\"\n\n&#8211; Sherlock Holmes by Sir Arthur Conan Doyle"</string>
    <string name="scrollable_message_hint">Enter a long message (500 chars max)</string>
    <string name="scrollable_message_clear">Clear Text</string>

<!--     Create Interaction Choice Set -->
    <string name="max_choices">You have reached the max number of choices.</string>
    <string name="item_number">Item #</string>
    
<!--     Choice Set Item -->
    <string name="item_number1">Item #1</string>
    <string name="choice_name">Choice Name</string>
    <string name="voice_keyword">Voice Recognition Keyword</string>
    <string name="use_artwork">Use artwork?</string>
    
<!--     Soft Button Item -->
    <string name="soft_button_name">Soft Button Name</string>
    <string name="soft_button_highlight">Highlight</string>
    <string name="soft_button_system_action">System Action</string>
    
<!--     Change Registration -->
    <string name="language">Language</string>
    <string name="hmi_language">HMI Display Language</string>
    
<!--     Alert Dialog -->
    <string name="text_to_speak">Text to Speak</string>
    <string name="text_to_speak_1">Hello</string>
    <string name="alert_line1">Alert Line #1</string>
    <string name="alert_line2">Alert Line #2</string>
    <string name="alert_line3">Alert Line #3</string>
    <string name="alert_sound_enabled">Alert sound enabled</string>
    <string name="alert_duration_s">Alert Duration (in seconds)</string>
    <string name="alert_duration_ms">Alert Duration (in milliseconds)</string>
    
<!--     Show Dialog -->
    <string name="metadata_lines">Metadata Lines</string>
    <string name="metadata_line1">Metadata Line #1</string>
    <string name="metadata_line2">Metadata Line #2</string>
    <string name="metadata_line3">Metadata Line #3</string>
    <string name="metadata_line4">Metadata Line #4</string>
    <string name="text_alignment">Text Alignment</string>
    <string name="status_bar">Status Bar</string>
    <string name="media_track">Media Track</string>
    <string name="media_clock">Media Clock</string>
    <string name="graphic">Graphic</string>
    <string name="secondary_graphic">Secondary Graphic</string>
    <string name="custom_presets">Custom Presets</string>
    
    <string name="media">Media</string>
    <string name="clock">Clock</string>
    <string name="clock_hrs">HH</string>
    <string name="clock_mins">MM</string>
    <string name="clock_secs">SS</string>
    <string name="colon">:</string>
    <string name="media_clock_timer_mode">Timer Mode</string>
    
	<string name="showText1">show text 1</string>
    <string name="showText2">show text 2</string>
    <string name="showText3">show text 3</string>
    <string name="showText4">show text 4</string>
    <string name="statusBarText">statusBar</string>
    <string name="mediaTrackText">mediaTrack</string>
    <string name="mediaClockText">12:34</string>
    <string name="customPresetsText">GEN0,GEN1,GEN2,GEN3,GEN4,GEN5</string>
    
<!--     Unit Suffixes -->
    <string name="units_seconds"> s</string>
    <string name="units_milliseconds"> ms</string>
    <string name="init_case">ready test case</string>
    <string name="start_test">start test</string>
    <string name="show_result">show result</string>
</resources>