<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
       android:id="@+id/tv_h264_status"
       style="@style/small_header_text"  />
      
    <Button
        android:id="@+id/btn_start_video"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_video" />

    <Button
        android:id="@+id/btn_stop_video"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/stop_video" />

    <Button
        android:id="@+id/btn_send_video"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/send_video" />

</LinearLayout>